fix(followUnfollow) solve some issues